--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^3.0.1",
     "antd": "^3.11.2",
     "axios": "^0.18.0",
+    "instamojo-nodejs": "0.0.5",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "react": "^16.4.2",
@@ -17,6 +18,7 @@
     "react-animated-css": "^1.0.4",
     "react-countdown-now": "^1.3.0",
     "react-dom": "^16.4.2",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^4.0.0",
     "react-orchestra": "^0.5.2",
     "react-router-dom": "^4.3.1",
