--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,7 @@
     }
   ],
   "start_url": "./index.html",
+  "csp": "script-src 'self' 'unsafe-inline'; object-src 'self'",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
