--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react-google-login": "^4.0.0",
     "react-orchestra": "^0.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
     "react-speech": "^0.3.2",
     "react-typing-animation": "^1.5.1",
     "react-voice-components": "^1.0.0",
@@ -33,5 +32,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
