--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-speech": "^0.3.2",
     "react-typing-animation": "^1.5.1",
     "react-voice-components": "^1.0.0",
+    "react-scripts": "^2.1.3",
     "superagent": "^4.0.0"
   },
   "scripts": {
