--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^3.0.1",
     "antd": "^3.11.2",
     "axios": "^0.18.0",
+    "disable-react-devtools": "^1.0.0",
     "instamojo-nodejs": "0.0.5",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
@@ -22,10 +23,10 @@
     "react-google-login": "^4.0.0",
     "react-orchestra": "^0.5.2",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.3",
     "react-speech": "^0.3.2",
     "react-typing-animation": "^1.5.1",
     "react-voice-components": "^1.0.0",
-    "react-scripts": "^2.1.3",
     "superagent": "^4.0.0"
   },
   "scripts": {
