--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^4.0.0",
     "react-orchestra": "^0.5.2",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "react-speech": "^0.3.2",
