--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.18.0",
     "disable-react-devtools": "^1.0.0",
     "instamojo-nodejs": "0.0.5",
+    "ip": "^1.1.5",
+    "iplocation": "^6.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "react": "^16.4.2",
@@ -25,6 +27,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "react-share": "^2.4.0",
     "react-speech": "^0.3.2",
     "react-typing-animation": "^1.5.1",
     "react-voice-components": "^1.0.0",
